SampleApp_25cG_C/SDK/CMMISDK_Api.h

	error_km KMAPI CMMISDK_SetSpecularComponent(int32_km inInstrumentNo, CMMISDK_SpecularComponent inSpecularComponent);
	error_km KMAPI CMMISDK_GetSpecularComponent(int32_km inInstrumentNo, CMMISDK_SpecularComponent* outSpecularComponent);
	error_km KMAPI CMMISDK_SetUv(int32_km inInstrumentNo, CMMISDK_Uv inUv);
	error_km KMAPI CMMISDK_GetUv(int32_km inInstrumentNo, CMMISDK_Uv* outUv);
	error_km KMAPI CMMISDK_SetAutoAverageTimes(int32_km inInstrumentNo, int32_km inTimes);
	error_km KMAPI CMMISDK_GetAutoAverageTimes(int32_km inInstrumentNo, int32_km* outTimes);
	error_km KMAPI CMMISDK_SetManualAverageTimes(int32_km inInstrumentNo, int32_km inTimes);
	error_km KMAPI CMMISDK_GetManualAverageTimes(int32_km inInstrumentNo, int32_km* outTimes);
	error_km KMAPI CMMISDK_SetManualAverageSaveMode(int32_km inInstrumentNo, CMMISDK_SaveMode inMode);
	error_km KMAPI CMMISDK_GetManualAverageSaveMode(int32_km inInstrumentNo, CMMISDK_SaveMode* outMode);
	error_km KMAPI CMMISDK_SetCondSMC(int32_km inInstrumentNo, const CMMISDK_CondSMC* inCond);
	error_km KMAPI CMMISDK_GetCondSMC(int32_km inInstrumentNo, CMMISDK_CondSMC* outCond);
	error_km KMAPI CMMISDK_SetDisplayType(int32_km inInstrumentNo, CMMISDK_DisplayType inDisplayType);
	error_km KMAPI CMMISDK_GetDisplayType(int32_km inInstrumentNo, CMMISDK_DisplayType* outDisplayType);
	error_km KMAPI CMMISDK_SetObserverAndIlluminant(int32_km inInstrumentNo, int32_km inNum, CMMISDK_Observer inObs, CMMISDK_Illuminant inIll);
	error_km KMAPI CMMISDK_GetObserverAndIlluminant(int32_km inInstrumentNo, int32_km inNum, CMMISDK_Observer* outObs, CMMISDK_Illuminant* outIll);
	error_km KMAPI CMMISDK_SetUserIlluminant(int32_km inInstrumentNo, const CMMISDK_UserIlluminant* inIllData);
	error_km KMAPI CMMISDK_GetUserIlluminant(int32_km inInstrumentNo, CMMISDK_UserIlluminant* outIllData);
	error_km KMAPI CMMISDK_SetColorSpace(int32_km inInstrumentNo, CMMISDK_ColorSpace inColorSpace);
	error_km KMAPI CMMISDK_GetColorSpace(int32_km inInstrumentNo, CMMISDK_ColorSpace* outColorSpace);
	error_km KMAPI CMMISDK_SetEquation(int32_km inInstrumentNo, CMMISDK_Equation inEquation);
	error_km KMAPI CMMISDK_GetEquation(int32_km inInstrumentNo, CMMISDK_Equation* outEquation);
	error_km KMAPI CMMISDK_SetCustomIndex(int32_km inInstrumentNo, int32_km inCustomNum, CMMISDK_CustomIndex inCustomIndex);
	error_km KMAPI CMMISDK_GetCustomIndex(int32_km inInstrumentNo, int32_km inCustomNum, CMMISDK_CustomIndex* outCustomIndex);
	error_km KMAPI CMMISDK_SetDirection(int32_km inInstrumentNo, CMMISDK_Direction inDirection);
	error_km KMAPI CMMISDK_GetDirection(int32_km inInstrumentNo, CMMISDK_Direction* outDirection);
	error_km KMAPI CMMISDK_SetUserEquation(int32_km inInstrumentNo, int32_km inNum, const CMMISDK_UserEquation* inEquation);
	error_km KMAPI CMMISDK_GetUserEquation(int32_km inInstrumentNo, int32_km inNum, CMMISDK_UserEquation* outEquation);
	error_km KMAPI CMMISDK_SetActiveTarget(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_GetActiveTarget(int32_km inInstrumentNo, int32_km* outNum);
	error_km KMAPI CMMISDK_GetSavedTargetList(int32_km inInstrumentNo, CMMISDK_SavedTargetList* outList);
	error_km KMAPI CMMISDK_GetTargetListInFilter(int32_km inInstrumentNo, CMMISDK_SavedTargetList* outList);
	error_km KMAPI CMMISDK_DeleteTargetData(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_DeleteAllTargetData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ClearTargetInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_LoadTargetInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_SaveTargetInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_SetTargetProperty(int32_km inInstrumentNo, const CMMISDK_TargetProperty* inProperty);
	error_km KMAPI CMMISDK_GetTargetProperty(int32_km inInstrumentNo, CMMISDK_TargetProperty* outProperty);
	error_km KMAPI CMMISDK_SetTargetData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_SetTargetDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, int32_km inNum, const CMMISDK_ColorCond *inCond, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetTargetDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, int32_km inNum, CMMISDK_ColorCond *outCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_GetTargetData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetToleranceForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, const CMMISDK_ToleranceData* inTolerance);
	error_km KMAPI CMMISDK_GetToleranceForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, CMMISDK_ToleranceData* outTolerance);
	error_km KMAPI CMMISDK_SetParametricForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, const CMMISDK_ParametricCoef* inParametric);
	error_km KMAPI CMMISDK_GetParametricForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, CMMISDK_ParametricCoef* outParametric);
	error_km KMAPI CMMISDK_SetTargetFilter(int32_km inInstrumentNo, CMMISDK_FilterIndex inIndex, const CMMISDK_GroupList* inGroup);
	error_km KMAPI CMMISDK_GetTargetFilter(int32_km inInstrumentNo, CMMISDK_FilterIndex* outIndex, CMMISDK_GroupList* outGroup);
	error_km KMAPI CMMISDK_SetTargetProtect(int32_km inInstrumentNo, CMMISDK_OnOff inProtect);
	error_km KMAPI CMMISDK_GetTargetProtect(int32_km inInstrumentNo, CMMISDK_OnOff* outProtect);
	error_km KMAPI CMMISDK_GetSavedSampleCount(int32_km inInstrumentNo, int32_km* outCount);
	error_km KMAPI CMMISDK_DeleteSampleData(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_DeleteAllSampleData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_LoadSampleInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_GetSampleProperty(int32_km inInstrumentNo, CMMISDK_SampleProperty* outProperty);
	error_km KMAPI CMMISDK_GetSampleData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetActiveGroup(int32_km inInstrumentNo, const CMMISDK_GroupList* inGroup);
	error_km KMAPI CMMISDK_GetActiveGroup(int32_km inInstrumentNo, CMMISDK_GroupList* outGroup);
	error_km KMAPI CMMISDK_SetGroupName(int32_km inInstrumentNo, int32_km inGroup, const CMMISDK_Group* inName);
	error_km KMAPI CMMISDK_GetGroupName(int32_km inInstrumentNo, int32_km inGroup, CMMISDK_Group* outName);
	error_km KMAPI CMMISDK_SetMultipleGroupName(int32_km inInstrumentNo, const CMMISDK_GroupAll* inName);
	error_km KMAPI CMMISDK_GetMultipleGroupName(int32_km inInstrumentNo, CMMISDK_GroupAll* outName);
	error_km KMAPI CMMISDK_LoadDefaultInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SaveDefaultInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetTolerance(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, const CMMISDK_ToleranceData* inTolerance);
	error_km KMAPI CMMISDK_GetTolerance(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, CMMISDK_ToleranceData* outTolerance);
	error_km KMAPI CMMISDK_SetParametric(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, const CMMISDK_ParametricCoef* inParametric);
	error_km KMAPI CMMISDK_GetParametric(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, CMMISDK_ParametricCoef* outParametric);
	error_km KMAPI CMMISDK_SetWarningLevel(int32_km inInstrumentNo, int32_km inLevel);
	error_km KMAPI CMMISDK_GetWarningLevel(int32_km inInstrumentNo, int32_km* outLevel);
	error_km KMAPI CMMISDK_SetInstrumentMode(int32_km inInstrumentNo, CMMISDK_InstrumentMode inMode);
	error_km KMAPI CMMISDK_GetInstrumentMode(int32_km inInstrumentNo, CMMISDK_InstrumentMode* outMode);