SDK/CMMISDK_Parameters.h

//Display type
typedef int32_km CMMISDK_DisplayType;
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Color value calculation conditions
struct CMMISDK_ColorCond
{
	CMMISDK_Observer	obs;			//Observer
	CMMISDK_Illuminant	ill;			//Illuminant
	CMMISDK_ColorSpace	colorSpace;		//Color space
										//	*A value other than COLOR_MUNSELL_C can be specified with CMMISDK_ReadLatestDataColor.
										//	*Only L*a*b*, Hunter Lab, and XYZ can be specified with CMMISDK_SetTargetDataColor and CMMISDK_GetTargetDataColor.
};


//SMC conditions
struct CMMISDK_CondSMC
{
	CMMISDK_OnOff			enable;		//Enable or disable function
	float64_km				threshold;	//Threshold value level (0.01 to 9.99)
	int32_km				times;		//Number of times to average (3 to 10 times)
};


//User illuminant data
struct CMMISDK_UserIlluminant
{
	float64_km	data[SIZE_USER_ILLUMINANT];		//User illuminant data
												//	85 items of data between 360 to 780 nm at 5-nm pitch
	char		name[SIZE_USER_ILL_NAME];		//User illuminant name
												//	Name to be displayed on the menu. If the character length is 0, it will be "User".
};
//Saved target list
struct CMMISDK_SavedTargetList
{
	int32_km   size;				//Number of saved targets
	int32_km   list[SIZE_TARGET];	//List of saved numbers
									//	*Stores the target numbers in the amount of the size variable.
};
//Target properties
struct CMMISDK_TargetProperty
{
	int32_km                   date[SIZE_DATE];			//Measurement (registration) date/time
														//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	int32_km                   group_list[SIZE_GROUP];	//Group number list
	CMMISDK_MeasType           meas_type;				//Measurement method
	CMMISDK_MeasMode           meas_mode;				//Measurement mode
	CMMISDK_MeasArea           meas_area;				//Measurement area
	CMMISDK_MeasAngle          meas_angle;				//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;				//Specular component
	CMMISDK_Uv                 meas_uv;					//UV condition
	int32_km                   warning_level;			//Warning level
	CMMISDK_Warning            warning;					//Warning information
														//	0x01	Voltage drop 
														//	0x02	Calibration recommended
														//	0x04	Xe lamp deterioration
														//	0x08	LED lamp deterioration
														//	0x10	Reflectance outside of measurable range
														//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;				//Diagnosis information
														//	0x01	Repeatability Status: Red
														//	0x02	Repeatability Status: Yellow
														//	0x04	Reproducibility Status: Red
														//	0x08	Reproducibility Status: Yellow
														//	0x10	Intensity Status: Red
														//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;				//Data attribute
	char                       name[SIZE_DATANAME];		//Data name
														//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//Tolerance data
struct CMMISDK_ToleranceData
{
	int32_km  upper_enable;	//Upper limit enable/disable (0: disable, 1: enable)
	int32_km  upper_value;	//Upper limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
	int32_km  lower_enable;	//Lower limit enable/disable (0: disable, 1: enable)
	int32_km  lower_value;	//Lower limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
};
//Parametric coefficient data
struct CMMISDK_ParametricCoef
{
	float64_km  coef[SIZE_PARAMETRIC_COEF];	//Parametric coefficient
};
//Measurement value properties
struct CMMISDK_SampleProperty
{
	int32_km                   date[SIZE_DATE];		//Measurement (registration) date/time
													//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	CMMISDK_MeasType           meas_type;			//Measurement method
	CMMISDK_MeasMode           meas_mode;			//Measurement mode
	CMMISDK_MeasArea           meas_area;			//Measurement area
	CMMISDK_MeasAngle          meas_angle;			//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;		//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;			//Specular component
	CMMISDK_Uv                 meas_uv;				//UV condition
	CMMISDK_Warning            warning;				//Warning information
													//	0x01	Voltage drop 
													//	0x02	Calibration recommended
													//	0x04	Xe lamp deterioration
													//	0x08	LED lamp deterioration
													//	0x10	Reflectance outside of measurable range
													//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;			//Diagnosis information
													//	0x01	Repeatability Status: Red
													//	0x02	Repeatability Status: Yellow
													//	0x04	Reproducibility Status: Red
													//	0x08	Reproducibility Status: Yellow
													//	0x10	Intensity Status: Red
													//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;			//Data attribute
	int32_km                   relation_target;		//Related target number
	char                       name[SIZE_DATANAME];	//Data name
													//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//User equation information
struct CMMISDK_UserEquation
{
	char   formula[SIZE_USER_EQUATION];		//User equation
	char   user_class[SIZE_USER_EQUATION];	//User classes
};
//Group list
struct CMMISDK_GroupList
{
	int32_km   group[SIZE_GROUP];	//Group list
};
//Group information
struct CMMISDK_Group
{
	char   name[SIZE_GROUP_NAME];	//Name
};
//All group information
struct CMMISDK_GroupAll
{
	char   name[SIZE_GROUP_ALL][SIZE_GROUP_NAME];	//Name
};