SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs

        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetSpecularComponent(Int32 inInstrumentNo, CMMISDK_SpecularComponent inSpecularComponent);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSpecularComponent(Int32 inInstrumentNo, ref CMMISDK_SpecularComponent outSpecularComponent);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUv(Int32 inInstrumentNo, CMMISDK_Uv inUv);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUv(Int32 inInstrumentNo, ref CMMISDK_Uv outUv);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetAutoAverageTimes(Int32 inInstrumentNo, Int32 inTimes);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetAutoAverageTimes(Int32 inInstrumentNo, ref Int32 outTimes);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetManualAverageTimes(Int32 inInstrumentNo, Int32 inTimes);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetManualAverageTimes(Int32 inInstrumentNo, ref Int32 outTimes);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetManualAverageSaveMode(Int32 inInstrumentNo, CMMISDK_SaveMode inMode);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetManualAverageSaveMode(Int32 inInstrumentNo, ref CMMISDK_SaveMode outMode);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetCondSMC(Int32 inInstrumentNo, ref CMMISDK_CondSMC inCond);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetCondSMC(Int32 inInstrumentNo, ref CMMISDK_CondSMC outCond);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetDisplayType(Int32 inInstrumentNo, CMMISDK_DisplayType inDisplayType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetDisplayType(Int32 inInstrumentNo, ref CMMISDK_DisplayType outDisplayType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetObserverAndIlluminant(Int32 inInstrumentNo, Int32 inNum, CMMISDK_Observer inObs, CMMISDK_Illuminant inIll);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetObserverAndIlluminant(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_Observer outObs, ref CMMISDK_Illuminant outIll);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUserIlluminant(Int32 inInstrumentNo, ref CMMISDK_UserIlluminant inIllData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserIlluminant(Int32 inInstrumentNo, ref CMMISDK_UserIlluminant outIllData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetColorSpace(Int32 inInstrumentNo, CMMISDK_ColorSpace inColorSpace);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetColorSpace(Int32 inInstrumentNo, ref CMMISDK_ColorSpace outColorSpace);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEquation(Int32 inInstrumentNo, CMMISDK_Equation inEquation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEquation(Int32 inInstrumentNo, ref CMMISDK_Equation outEquation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetCustomIndex(Int32 inInstrumentNo, Int32 inCustomNum, CMMISDK_CustomIndex inCustomIndex);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetCustomIndex(Int32 inInstrumentNo, Int32 inCustomNum, ref CMMISDK_CustomIndex outCustomIndex);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetDirection(Int32 inInstrumentNo, CMMISDK_Direction inDirection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetDirection(Int32 inInstrumentNo, ref CMMISDK_Direction outDirection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUserEquation(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_UserEquation inEquation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserEquation(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_UserEquation outEquation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetActiveTarget(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetActiveTarget(Int32 inInstrumentNo, ref Int32 outNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSavedTargetList(Int32 inInstrumentNo, ref CMMISDK_SavedTargetList outList);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetListInFilter(Int32 inInstrumentNo, ref CMMISDK_SavedTargetList outList);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_DeleteTargetData(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_DeleteAllTargetData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ClearTargetInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_LoadTargetInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SaveTargetInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTargetProperty(Int32 inInstrumentNo, ref CMMISDK_TargetProperty inProperty);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetProperty(Int32 inInstrumentNo, ref CMMISDK_TargetProperty outProperty);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTargetData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTargetDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, Int32 inNum, ref CMMISDK_ColorCond inCond, ref CMMISDK_Data inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, Int32 inNum, ref CMMISDK_ColorCond outCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetToleranceForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData inTolerance);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetToleranceForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData outTolerance);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetParametricForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef inParametric);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetParametricForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef outParametric);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTargetFilter(Int32 inInstrumentNo, CMMISDK_FilterIndex inIndex, ref CMMISDK_GroupList inGroup);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetFilter(Int32 inInstrumentNo, ref CMMISDK_FilterIndex outIndex, ref CMMISDK_GroupList outGroup);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTargetProtect(Int32 inInstrumentNo, CMMISDK_OnOff inProtect);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTargetProtect(Int32 inInstrumentNo, ref CMMISDK_OnOff outProtect);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSavedSampleCount(Int32 inInstrumentNo, ref Int32 outCount);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_DeleteSampleData(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_DeleteAllSampleData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_LoadSampleInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSampleProperty(Int32 inInstrumentNo, ref CMMISDK_SampleProperty outProperty);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSampleData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetActiveGroup(Int32 inInstrumentNo, ref CMMISDK_GroupList inGroup);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetActiveGroup(Int32 inInstrumentNo, ref CMMISDK_GroupList outGroup);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetGroupName(Int32 inInstrumentNo, Int32 inGroup, ref CMMISDK_Group inName);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetGroupName(Int32 inInstrumentNo, Int32 inGroup, ref CMMISDK_Group outName);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetMultipleGroupName(Int32 inInstrumentNo, ref CMMISDK_GroupAll inName);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetMultipleGroupName(Int32 inInstrumentNo, ref CMMISDK_GroupAll outName);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_LoadDefaultInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SaveDefaultInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTolerance(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData inTolerance);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTolerance(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData outTolerance);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetParametric(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef inParametric);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetParametric(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef outParametric);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetWarningLevel(Int32 inInstrumentNo, Int32 inLevel);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetWarningLevel(Int32 inInstrumentNo, ref Int32 outLevel);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetInstrumentMode(Int32 inInstrumentNo, CMMISDK_InstrumentMode inMode);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetInstrumentMode(Int32 inInstrumentNo, ref CMMISDK_InstrumentMode outMode);
